--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,12 @@ readme = "README.md"
 edition = "2021"
 
 [workspace.dependencies]
-clap = "4.5.16"
+grift-core.path = "grift-core"
+
+clap = { version = "4.5.16", features = ["cargo", "derive", "string"] }
 git2 = "0.19.0"
 sqlx = "0.8.0"
 tokio = "1.39.3"
+clap_complete = "4.5.23"
+eyre = "0.6.12"
+dirs = "5.0.1"
