--- a/grift-daemon/Cargo.toml
+++ b/grift-daemon/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "grift-daemon"
-version = "0.0.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
