--- a/grift-core/Cargo.toml
+++ b/grift-core/Cargo.toml
@@ -6,5 +6,7 @@ edition.workspace = true
 [dependencies]
 eyre = { workspace = true }
 git2 = { workspace = true }
+octocrab = { workspace = true }
+regex = "1.10.6"
 sqlx = { workspace = true }
 tokio = { workspace = true }
