--- a/grift-core/Cargo.toml
+++ b/grift-core/Cargo.toml
@@ -7,6 +7,6 @@ edition.workspace = true
 eyre = { workspace = true }
 git2 = { workspace = true }
 octocrab = { workspace = true }
-regex = "1.10.6"
+regex = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
