--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,18 @@ colored = "2.1.0"
 dirs = "5.0.1"
 eyre = "0.6.12"
 git2 = "0.19.0"
+hyper-util = { version = "0.1.7", features = ["tokio"] }
 octocrab = "0.39.0"
+prost = "0.13.1"
 regex = "1.10.6"
 sqlx = "0.8.0"
 tokio = { version = "1.39.3", features = ["full"] }
+tokio-stream = "0.1.15"
+tonic = "0.12.1"
+tonic-build = "0.12.1"
+tower = "0.4.13"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+users = "0.11.0"
+futures = "0.3.30"
+tokio-util = "0.7.11"
