--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,21 +19,22 @@ grift-core.path = "grift-core"
 clap = { version = "4.5.16", features = ["cargo", "derive", "string"] }
 clap_complete = "4.5.23"
 colored = "2.1.0"
+color-eyre = "0.6.3"
 dirs = "5.0.1"
 eyre = "0.6.12"
+futures = "0.3.30"
 git2 = "0.19.0"
 hyper-util = { version = "0.1.7", features = ["tokio"] }
 octocrab = "0.39.0"
 prost = "0.13.1"
 regex = "1.10.6"
-sqlx = "0.8.0"
+rusqlite = { version = "0.32.1", features = ["bundled"] }
 tokio = { version = "1.39.3", features = ["full"] }
 tokio-stream = "0.1.15"
+tokio-util = "0.7.11"
 tonic = "0.12.1"
 tonic-build = "0.12.1"
 tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-users = "0.11.0"
-futures = "0.3.30"
-tokio-util = "0.7.11"
+xdg = "2.5.2"
