--- a/grift-cli/Cargo.toml
+++ b/grift-cli/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
-name = "grift"
+name = "grift-cli"
 version.workspace = true
 edition.workspace = true
+
+[[bin]]
+name = "grift"
+path = "src/main.rs"
 
 [dependencies]
 clap = { workspace = true }
 clap_complete = { workspace = true }
+color-eyre = { workspace = true }
 colored = { workspace = true }
 dirs = { workspace = true }
 eyre = { workspace = true }
