--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ octocrab = "0.39.0"
 prost = "0.13.1"
 regex = "1.10.6"
 rusqlite = { version = "0.32.1", features = ["bundled"] }
+thiserror = "1.0.63"
 tokio = { version = "1.39.3", features = ["full"] }
 tokio-stream = "0.1.15"
 tokio-util = "0.7.11"
