--- a/grift-daemon/Cargo.toml
+++ b/grift-daemon/Cargo.toml
@@ -13,6 +13,7 @@ color-eyre = { workspace = true }
 eyre = { workspace = true }
 grift-core = { workspace = true }
 rusqlite = { workspace = true }
+thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
