--- a/grift-daemon/Cargo.toml
+++ b/grift-daemon/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 clap = { workspace = true }
 color-eyre = { workspace = true }
 eyre = { workspace = true }
+git2 = { workspace = true }
 grift-core = { workspace = true }
 rusqlite = { workspace = true }
 thiserror = { workspace = true }
